force-app/main/default/objects/IbdContact__e.object
<CustomObject>
    <description>Inbound students and applicants</description>
    <fields>
        <fullName>Applicant_Email_Addresses__c</fullName>
        <label>Applicant Email Addresses</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_IDs__c</fullName>
        <label>Applicant IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <label>Citizenship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Birth__c</fullName>
        <label>Country Of Birth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates an active DSS registration is in place.

Sourced from:

select &apos;Y&apos; from ias_custom.cl_dlu_person_details cldpa
where nvl(cldpa.archived, &apos;N&apos;) = &apos;N&apos;</description>
        <label>DSS Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESOS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Education Services for Overseas Students.

They are the government guidelines and legislation that set out the responsibilities of education providers who are providing courses to students who hold student visas (generally visa class 500.)</description>
        <label>ESOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Govt_Citizenship_Cd__c</fullName>
        <label>Govt Citizenship Cd</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Arrived_In_Australia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student arrived in Australia? (Applicable only to current student context)
Derived with specific Person ID Group in Callista.</description>
        <label>Has Arrived in Australia?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_account_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IT account disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Student_Card_Image_Updated_Date__c</fullName>
        <description>Date when the student last updated their student card image. (Applicable only to the current student context)</description>
        <label>Last Student Card Image Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monash_Email__c</fullName>
        <label>Monash Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monash_Username__c</fullName>
        <description>The Monash username of ther person, e.g. abcd1234 for students.</description>
        <label>Monash Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality2__c</fullName>
        <label>2nd Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Given_Name__c</fullName>
        <label>Other Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>Mapped from the person.PREFERRED_GIVEN_NAME field</description>
        <label>Preferred Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USI__c</fullName>
        <description>Universal Student Id</description>
        <label>USI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VTAC_Id__c</fullName>
        <description>Another alternative person identifier from Callista</description>
        <label>VTAC Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inbound Contact</label>
    <pluralLabel>Inbound Contacts</pluralLabel>
</CustomObject>